--- a/index.html
+++ b/index.html
@@ -66,9 +66,8 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <!-- <h2 class="text-white mb-4">Built with Bootstrap 4</h2> -->
-          <p class="text-white">Hello! I’m a Software Engineer with a background in medicine, multimedia art, interaction design, and teaching. I love using logic, big systems thinking, and compassion to solve problems of all kinds, building things
-            that are good for people. <br><br> While deepening my skills as a software developer, I’ve als obecome interested in Product Management, supporting a diverse team in building the right things, finding the metaphors that help everyone get
-            on the same page, and nurturing your positive organization.</p>
+          <p class="text-white">Hello! I’m a Software Engineer with a background in medicine, multimedia art, interaction design, and teaching. I love using logic, big systems thinking, and compassion to solve problems of all kinds, building things that are good for people. <br><br>
+          While deepening my skills as a software developer, I’ve also become interested in Product Management, supporting a diverse team in building the right things, finding the metaphors that help everyone get on the same page, and nurturing your positive organization.</p>
         </div>
       </div>
       <!-- <img src="img/ipad.png" class="img-fluid" alt=""> -->
@@ -87,7 +86,7 @@
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
             <h4>Main Project</h4>
-            <p class="text-black-50 mb-0">I have yet to decide what this will be! But this is where the description will go.</p>
+            <p class="text-black-50 mb-0">I have yet to decide which one this will be! But this is where the description will go.</p>
           </div>
         </div>
       </div>
@@ -131,8 +130,8 @@
     </div>
   </section>
 
-  <!-- Signup Section -->
-  <section id="signup" class="signup-section">
+  <!-- Contact Section -->
+  <section class="contact-section bg-black">
     <div class="container">
       <div class="row">
         <div class="col-12 mx-auto text-center">
@@ -180,30 +179,27 @@
         </div>
       </div>
     </div>
-  </section>
-
-  <!-- Contact Section -->
-  <section class="contact-section bg-black">
     <div class="container">
       <div class="social d-flex justify-content-center">
-        <a href="#" class="mx-2">
-          <i class="fab fa-twitter"></i>
-        </a>
-        <a href="#" class="mx-2">
-          <i class="fab fa-facebook-f"></i>
-        </a>
-        <a href="#" class="mx-2">
+        <a href="https://github.com/zzyyfff" class="mx-2">
           <i class="fab fa-github"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/jonathan-lee-marcus/" class="mx-2">
+          <i class="fab fa-linkedin"></i>
         </a>
       </div>
 
     </div>
   </section>
 
+
+
+
+
   <!-- Footer -->
   <footer class="bg-black small text-center text-white-50">
     <div class="container">
-      Copyright &copy; Your Website 2019
+      Copyright &copy; Jonathan Lee Marcus 2019
     </div>
   </footer>
 
