Minor content edit

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="col-lg-8 mx-auto">
           <!-- <h2 class="text-white mb-4">Built with Bootstrap 4</h2> -->
           <p class="text-white">Hello! I’m a Software Engineer with a background in medicine, multimedia art, interaction design, and teaching. I love using logic, big systems thinking, and compassion to solve problems of all kinds, building things that are good for people. <br><br>
-          While deepening my skills as a software developer, I’ve also become interested in Product Management, supporting a diverse team in building the right things, finding the metaphors that help everyone get on the same page, and nurturing your positive organization.</p>
+          While deepening my skills as a developer, I’ve also become fascinated by Product Management, supporting a diverse team in building the right things, finding the metaphors that help everyone get on the same page, and nurturing positive organization.</p>
         </div>
       </div>
       <!-- <img src="img/ipad.png" class="img-fluid" alt=""> -->
