Completed basic portfolio site
+ added picture of self
+ added all three major projects
+ updated resume pdf

--- a/index.html
+++ b/index.html
@@ -64,13 +64,20 @@
   <section id="about" class="about-section text-center">
     <div class="container">
       <div class="row">
-        <div class="col-lg-8 mx-auto">
+        <div class="col-lg-4">
+          <img src="/img/me-round.png" alt="">
+          <div class="row">&nbsp;</div>
+        </div>
+        <div class="col-lg-2"></div>
+        <div class="col-lg-6 d-flex flex-column justify-content-center">
           <!-- <h2 class="text-white mb-4">Built with Bootstrap 4</h2> -->
-          <p class="text-white">Hello! I’m a Software Engineer with a background in medicine, multimedia art, interaction design, and teaching. I love using logic, big systems thinking, and compassion to solve problems of all kinds, building things that are good for people. <br><br>
-          While deepening my skills as a developer, I’ve also become fascinated by Product Management, supporting a diverse team in building the right things, finding the metaphors that help everyone get on the same page, and nurturing positive organization.</p>
+          <p class="text-white m-0">Hello! I’m a Software Engineer with a background in medicine, multimedia art, interaction design, and teaching. I love using logic, big systems thinking, and compassion to solve problems of all kinds, building
+            things that are good for people. <br><br>
+            While deepening my skills as a developer, I’ve also become fascinated by Product Management, supporting a diverse team in building the right things, finding the metaphors that help everyone get on the same page, and nurturing positive
+            organization.</p>
         </div>
       </div>
-      <!-- <img src="img/ipad.png" class="img-fluid" alt=""> -->
+      <div class="row">&nbsp;</div>
     </div>
   </section>
 
@@ -79,14 +86,18 @@
     <div class="container">
 
       <!-- Featured Project Row -->
-      <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+      <div class="row align-items-center no-gutters mb-4 mb-lg-5 p-3 main-project">
         <div class="col-xl-8 col-lg-7">
-          <img class="img-fluid mb-3 mb-lg-0" src="img/bg-masthead.jpg" alt="">
+          <a href="https://zzyyfff.github.io/chat-client" target="_blank">
+            <img class="img-fluid mb-3 mb-lg-0" src="img/chat-1.png" alt="">
+          </a>
         </div>
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
-            <h4>Main Project</h4>
-            <p class="text-black-50 mb-0">I have yet to decide which one this will be! But this is where the description will go.</p>
+            <a href="https://zzyyfff.github.io/chat-client" target="_blank">
+              <h4><u>∿Chat</u></h4>
+              <p class="text-black-50 mb-0">A featureful real-time chat app, providing users the chance to edit their messages on the fyly Built with React, Express, Mongoose, and MongoDB.</p>
+            </a>
           </div>
         </div>
       </div>
@@ -94,14 +105,18 @@
       <!-- Project One Row -->
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/demo-image-01.jpg" alt="">
+          <a href="https://2jar.github.io/photo-jar-client" target="_blank">
+            <img class="img-fluid" src="img/photo-jar-1.png" alt="">
+          </a>
         </div>
         <div class="col-lg-6">
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h4 class="text-white">2nd Project</h4>
-                <p class="mb-0 text-white-50">A description goes here.</p>
+                <a href="https://2jar.github.io/photo-jar-client" target="_blank">
+                  <h4 class="text-white">Photo Jar</h4>
+                  <p class="mb-0 text-white-50">A photo storage and sharing app with geolocation intergration. Built with JavaScript, jQuery, HTML, SASS, Express, Mongoose, MongoDB, and AWS.</p>
+                </a>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
@@ -112,14 +127,18 @@
       <!-- Project Two Row -->
       <div class="row justify-content-center no-gutters">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/demo-image-02.jpg" alt="">
+          <a href="https://zzyyfff.github.io/scouting-advancement-tracker-client" target="_blank">
+            <img class="img-fluid" src="img/scouting-1.png" alt="">
+          </a>
         </div>
         <div class="col-lg-6 order-lg-first">
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
-                <h4 class="text-white">3rd Project</h4>
-                <p class="mb-0 text-white-50">Another description will be here!</p>
+                <a href="https://zzyyfff.github.io/scouting-advancement-tracker-client" target="_blank">
+                  <h4 class="text-white">Scout-Tracker</h4>
+                  <p class="mb-0 text-white-50">A scouting achievement and merit badge tracker, with a RESTful backend. Built with Ruby, Rails, & PostgreSQL and a frontend includes JavaScript, jQuery, and SASS.</p>
+                </a>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
