force resume to download

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="mx-auto text-center">
         <h1 class="mx-auto my-0 text-uppercase">Jonathan Marcus</h1>
         <h2 class="text-white-50 mx-auto mt-2 mb-5">Software Engineer and Product Manager</h2>
-        <a href="JonathanLeeMarcusResume.pdf" target="_blank" class="btn btn-primary js-scroll-trigger">Download Résumé</a>
+        <a href="JonathanLeeMarcusResume.pdf" download class="btn btn-primary js-scroll-trigger">Download Résumé</a>
       </div>
     </div>
   </header>
