minor edits a build site

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="col-lg-2"></div>
         <div class="col-lg-6 d-flex flex-column justify-content-center">
           <!-- <h2 class="text-white mb-4">Built with Bootstrap 4</h2> -->
-          <p class="text-white m-0">Hello! I’m a Software Engineer with a background in medicine, multimedia art, interaction design, and teaching. I love using logic, big systems thinking, and compassion to solve problems of all kinds, building
+          <p class="text-white m-0">Hello! I’m a Software Engineer with a background in clinical medicine, multimedia art, interaction design, and teaching. I love using logic, big systems thinking, and compassion to solve problems of all kinds, building
             things that are good for people. <br><br>
             While deepening my skills as a developer, I’ve also become fascinated by Product Management, supporting a diverse team in building the right things, finding the metaphors that help everyone get on the same page, and nurturing positive
             organization.</p>
@@ -96,7 +96,7 @@
           <div class="featured-text text-center text-lg-left">
             <a href="https://zzyyfff.github.io/chat-client" target="_blank">
               <h4><u>∿Chat</u></h4>
-              <p class="text-black-50 mb-0">A featureful real-time chat app, providing users the chance to edit their messages on the fyly Built with React, Express, Mongoose, and MongoDB.</p>
+              <p class="text-black-50 mb-0">A featureful real-time chat app, providing users the opportunity to edit their messages on the fly. Built with React, Express, Mongoose, and MongoDB.</p>
             </a>
           </div>
         </div>
